# dAgent

./: .env.example  .gitignore  Makefile  README.md
docker/automation-stack/: .env.example  compose.yml
docs/: apple-shortcuts.md  architecture.md  code-worker.md  command-matrix.md  dlogs-integration.md  first-watch-workflow.md  github-accounts.md  hosted-terminal.md  n8n-workflows.md  operations.md  references.md  reproducible-setup.md  security-model.md  worker-service.md
examples/payloads/: approval.json  capture-idea.json  code-task.json  codex-task.json  repo-status.json  script-task-test.json
examples/shortcuts/: apple-watch-shortcut.md
examples/workflows/: router-pseudocode.md
scripts/: bootstrap_dagent.sh  dagentctl  deploy_n8n.sh  dlogs_import_dashboard.py  dlogs_register_prometheus_target.py  dlogs_smoke_test.sh  generate_secrets.sh  install_automation_startup.sh  launch_web_terminal.sh  n8nctl  setup_n8n_watch_env.sh  sign_payload.py  smoke_test_worker.sh  start_worker.sh  terminalctl  test_capture_idea.sh  test_n8n_code_task_webhook.sh  test_n8n_public.sh  test_n8n_watch_webhook.sh  test_ntfy.sh
worker/: Dockerfile  README.md  config.chatgpt.example.yml  config.example.yml  pyproject.toml
worker/src/dagent_worker/: __init__.py  config.py  jobs.py  main.py  metrics.py  notifier.py  projects.py  runner.py  schemas.py  security.py
worker/src/dagent_worker/static/: dashboard.html  detail.html
worker/tests/: test_code_worker.py  test_config.py  test_idea_document.py  test_idempotency.py  test_metrics.py  test_runner.py  test_security.py
(+9 files in other folders)
